fix fitContent icon arrow wrap

--- a/assets/src/datagrid.scss
+++ b/assets/src/datagrid.scss
@@ -311,7 +311,7 @@
 		}
 
 		th.datagrid-fit-content, td.datagrid-fit-content {
-			width: 1%;
+			width: calc(1% + 1px);
 			white-space: nowrap;
 		}
 	}
